maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:24: error: value North is not a member of object plm.universe.Direction
    setDirection(Direction.North)
                           ^