maze.island.IslandMaze.scala.code
override def run() {
  def keepLeftHand() {
    
      left()
      if ( ! isFacingWall()) {
        forward() 
        } else {
    					right()
    					if (! isFacingWall()) {
                forward
              } else {
                	right()
                	if (! isFacingWall()) {
                  	forward
                	} else {
                  right()
                }
              }
            }
  
			}
  while (! isOverBaggle()) {
    setDirection(Direction.North)
    if (! isFacingWall()) {forward}
    else {
      keepLeftHand()
    }
    
  }
  pickupBaggle()
}